finish styling for single project with correct spacings, add logo to left top of the container and repair button and form height

--- a/assets/scss/partials/variables.scss
+++ b/assets/scss/partials/variables.scss
@@ -98,7 +98,7 @@ $spacing-6: ($spacing * 6);
 $spacing-7: ($spacing * 7);
 $spacing-8: ($spacing * 8);
 $spacing-half: math.div($spacing, 2);
-$spacing-xl: toRem(125px);
+$spacing-xl: toRem(138px);
 
 //----------------
 // VARIABLES: Transition
